amend contrast issues in index.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ nav {
 }
 
 .support {
-    color: #000;
+    color: #02020a;
     font-weight: 600;
 }
 
@@ -37,11 +37,13 @@ nav {
 .search {
     display: flex;
     flex-wrap: wrap;
+    background-color: #EAE7DD;
     justify-content: space-between;
     padding: 10px 30px 0 30px;
 }
 
 .brand-head {
+    background-color: #99775C;
     display: flex;
     justify-content: center;
 }
@@ -94,11 +96,14 @@ footer {
     color: #02020A;
 }
 
-.post-link:hover,
+.post-link:hover {
+    color: #D9730d;
+}
+
 .page-link {
     background-color: #156064;
     color: #fff;
-    font-weight: bolder;
+    font-weight: bold;
 }
 
 /* style for post_detail.html */
