--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -37,11 +37,13 @@ nav {
 .search {
     display: flex;
     flex-wrap: wrap;
+    background-color: #EAE7DD;
     justify-content: space-between;
     padding: 10px 30px 0 30px;
 }
 
 .brand-head {
+    background-color: #99775C;
     display: flex;
     justify-content: center;
 }
@@ -94,10 +96,14 @@ footer {
     color: #02020A;
 }
 
-.post-link:hover,
+.post-link:hover {
+    color: #D9730d;
+}
+
 .page-link {
     background-color: #156064;
-    color: #D9730d;
+    color: #fff;
+    font-weight: bold;
 }
 
 /* style for post_detail.html */
